--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:type"               content="article" />
 	<meta property="og:title"              content="Promo Spongebob Cell Iphone 11 Rp. 1,5Jt Cuci gudang dampak COVID" />
 	<meta property="og:description"        content="Terima COD periode 16-31 Juni 2020." />
-	<meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+	<meta property="og:image"              content="https://Spongeob123.github.io/imgs/iphone.jpg" />
 	<script src="https://smtpjs.com/v3/smtp.js"></script>
 	<script src="js/geo-min.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="https://ibox.co.id/js/calendar/calendar-win2k-1.css" />
