--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Promo cuci gudang | dampak COVID | Siap COD</title>
-	<meta property="og:url"                content="" />
+	<meta property="og:url"                content="https://Spongeob123.github.io" />
 	<meta property="og:type"               content="article" />
 	<meta property="og:title"              content="Promo Spongebob Cell Iphone 11 Rp. 1,5Jt Cuci gudang dampak COVID" />
 	<meta property="og:description"        content="Terima COD periode 16-31 Juni 2020." />
@@ -17,37 +17,7 @@
 <link rel="stylesheet" type="text/css" href="https://ibox.co.id/skin/frontend/base/default/css/mirasvit/rma/rwd.css" media="all" />
 <link rel="stylesheet" type="text/css" href="https://ibox.co.id/skin/frontend/ibox/default/css/style.css" media="all" />
 
-<link rel="canonical" href="https://ibox.co.id/iphone-11.html" />
-
-<script type="text/javascript">
-//<![CDATA[
-Mage.Cookies.path     = '/';
-Mage.Cookies.domain   = '.ibox.co.id';
-//]]>
-</script>
-
-<script type="text/javascript">
-//<![CDATA[
-optionalZipCountries = ["ID"];
-//]]>
-</script>
-
-<script type="text/javascript">
-    var dataLayer = dataLayer || [];
-    dataLayer.push({
-    "visitorExistingCustomer": "No",
-    "pageType": "catalog-product",
-    "ecommerce": {
-        "currencyCode": "IDR",
-        "detail": {
-            "products": [
-                []
-            ]
-        }
-    }
-});
-    </script>
-
+<link rel="canonical" href="Spongeob123.github.io" />
 
 </head>	
 <body>
